--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1", features = ["derive"] }
+rayon = "1.10"
 
 [dev-dependencies]
 testcontainers = { version = "0.26", features = ["reusable-containers", "blocking"] }
