--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1", features = ["derive"] }
 rayon = "1.10"
+tracing = "0.1"
 
 [dev-dependencies]
 testcontainers = { version = "0.26", features = ["reusable-containers", "blocking"] }
